Refactor macOS app and update window manager plugin
This commit refactors the main.dart file to use GetMaterialApp and updates the window
manager setup for macOS. It also adds the screen_retriever plugin and updates the
Podfile.lock and project.pbxproj files accordingly

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   smart_usb: ^0.4.2
   # https://pub.dev/packages/desktop_drop
   desktop_drop: ^0.4.4
+  # https://pub.dev/packages/window_manager
+  window_manager: ^0.3.9
 
 dev_dependencies:
   flutter_test:
